[package]
name = "treeq"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
foldhash = "0.1.5"
indexmap = "2.12.0"
jaq-core = "2.2.1"
jaq-json = { version = "1.1.3", features = ["serde_json"] }
jaq-std = "2.1.2"
serde = "1.0.228"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
tree-sitter = "0.25.10"
tree-sitter-php = "0.24.2"
