[package]
name = "treeq"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
codesnake = "0.2.1"
foldhash = "0.1.5"
ignore = "0.4.25"
indexmap = "2.12.0"
jaq-core = "2.2.1"
jaq-json = { version = "1.1.3", features = ["serde_json"] }
jaq-std = "2.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
tree-sitter = "0.25.10"
tree-sitter-language = "0.1.5"
tree-sitter-php = "0.24.2"
tree-sitter-rust = "0.24.0"
